--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -14,4 +14,6 @@ networks:
   mainnet-fork-dev:
     PoolAddressesProvider: "0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e"
     WethToken: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
+    Dai: "0x6b175474e89094c44da98b954eedeac495271d0f"
+    DaiEth: "0x773616E4d11A78F511299002da57A0a94577F1f4"
   sepolia:
